[package]
name = "ccm"
version = "0.1.0"
edition = "2024"

[dependencies]
adw = { package = "libadwaita", version = "0.7", features = ["v1_7"] }
gettext-rs = { version = "0.7", features = ["gettext-system"] }
gtk = { version = "0.9", package = "gtk4", features = ["gnome_47"] }
tracing = "0.1"
tsparql = { version = "0.6.1", package = "tracker-rs", features = ["v3_5"] }
